--- a/index.html
+++ b/index.html
@@ -1,249 +1,193 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- FONTE GOOGLE -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- FIM FONTE GOOGLE -->
-    <!--BOOTSTRAP ICONS-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <!--BOOTSTRAP ICONS-->
-    <link rel="stylesheet" href="styles/style.css" />
-    <title>Meus Projetos</title>
-  </head>
-  <body>
-    <header>
-      <!--HEADER-->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- FIM GOOGLE FONTES -->
+    <!-- BOOTSTRAP ICONS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- FIM BOOTSTRAP ICONS -->
+    <link rel="shortcut icon" href="imagens/Logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
 
-      <div class="interface">
-        <div class="logo">
-          <a href="">
-            <img src="imagens/Logo.svg" alt="logo" width="130" height="130" />
-          </a>
-        </div>
-        <nav class="menu-desktop">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Especialidades</a></li>
-            <li><a href="#">Sobre mim</a></li>
-            <li><a href="#">Projetos</a></li>
-          </ul>
-        </nav>
-        <div class="btn-contato">
-          <a href="#">
-            <button>Contato</button>
-          </a>
-        </div>
-      </div>
+    <script src="menu.js" defer></script>
+
+    <title>PORTFÓLIO</title>
+</head>
+<body>
+    
+    <header>
+        <div class="interface">
+            <div class="logo">
+                <a href="#">
+                    <img src="imagens/Logo.svg" alt="logo" width="130px" height="130px">
+                </a>
+            </div><!--logo-->
+
+            <nav class="menu-desktop">
+                <ul>
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Especialidades</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Projetos</a></li>
+                </ul>
+            </nav>
+
+            <div class="btn-contato">
+                <a href="#">
+                    <button>Contato</button>
+                </a>
+            </div><!--btn-contato-->
+
+            <div class="btn-abrir-menu" id="btn-menu">
+                <i class="bi bi-list" alt="menu"></i>
+            </div>
+
+            <div class="menu-mobile" id="menu-mobile">
+                <div class="btn-fechar">
+                    <i class="bi bi-x-lg"></i>
+                </div>
+
+                <nav>
+                    <ul>
+                        <li><a href="#">Início</a></li>
+                        <li><a href="#">Especialidades</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Projetos</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+
+            </div><!--menu-mobile-->
+            <div class="overlay-menu" id="overlay-menu"></div>
+        </div><!--interface-->
     </header>
-    <!--HEADER-->
 
     <main>
-      <!--MAIN-->
-      <section class="topo-do-site">
-        <!--TOPO DO SITE-->
-        <div class="interface">
-          <div class="flex">
-            <div class="txt-topo-site">
-              <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
-                reiciendis labore, eum quo maxime aliquid repudiandae aperiam in
-                iusto ad nihil quis quod dicta dignissimos molestiae hic
-                temporibus repellendus eaque.
-              </p>
-              <div class="btn-contato">
-                <a href="#">
-                  <button>Entre em Contato</button>
-                </a>
-              </div>
-            </div>
-            <div class="img-topo-site">
-              <img src="imagens/pessoa.svg" alt="" />
-            </div>
-          </div>
-        </div>
-      </section>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
+                        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otimização para resultados, estou pronto(a) para criar a presença online dos seus sonhos.</p>
 
-      <section class="especialidades">
-        <!--ESPECIALIDADES-->
-        <div class="interface">
-          <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
-          <div class="flex">
-            <div class="especialidades-box">
-              <i class="bi bi-code-slash"></i>
-              <h3>WebSite</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Doloribus reiciendis nostrum at libero asperiores quod
-                doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio
-                mollitia totam autem soluta maiores.
-              </p>
-            </div>
-            <div class="especialidades-box">
-              <i class="bi bi-cart"></i>
-              <h3>Loja Online</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Doloribus reiciendis nostrum at libero asperiores quod
-                doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio
-                mollitia totam autem soluta maiores.
-              </p>
-            </div>
-            <div class="especialidades-box">
-              <i class="bi bi-wordpress"></i>
-              <h3>Blog</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Doloribus reiciendis nostrum at libero asperiores quod
-                doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio
-                mollitia totam autem soluta maiores.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em contato</button>
+                            </a>
+                        </div>
+                    </div><!--txt-topo-site-->
 
-      <section class="sobre">
-        <!--SOBRE-->
-        <div class="interface">
-          <div class="flex">
-            <div class="img-sobre">
-              <img src="imagens/pessoa-foto.svg" alt="" />
-            </div>
-            <div class="txt-sobre">
-              <h2>MUITO PRAZER, <span>SOU FULANO DE TAL.</span></h2>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure,
-                libero porro cumque illum quisquam possimus! Ad expedita sit
-                temporibus molestiae, eum ab praesentium, odio corporis error,
-                aut fuga aspernatur recusandae?
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Tenetur, optio. Minima sequi, commodi aliquid aliquam similique
-                hic quaerat quasi in, vitae tempore adipisci reprehenderit
-                consectetur qui accusamus a veritatis totam.
-              </p>
-              <div class="btn-social">
-                <a
-                  href="https://www.instagram.com/lucasgabrieldev/"
-                  target="_blank"
-                  ><button><i class="bi bi-instagram"></i></button
-                ></a>
-                <a href="https://github.com/Lucassevero06" target="_blank"
-                  ><button><i class="bi bi-github"></i></button
-                ></a>
-                <a
-                  href="https://www.linkedin.com/in/lucas-gabriel-de-silva-vaz-severo-b88061296/"
-                  target="_blank"
-                  ><button><i class="bi bi-linkedin"></i></button
-                ></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+                    <div class="img-topo-site">
+                        <img src="imagens/pessoa.svg" alt="">
+                    </div><!--img-topo-site-->
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--topo-do-site-->
 
-      <section class="portifolio">
-        <!--PORTIFOLIO-->
-        <div class="interface">
-          <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
-          <div class="flex">
-            <div
-              class="img-port"
-              style="background-image: url(imagens/imagem.jpg)"
-            >
-              <div class="overlay">Projeto 1</div>
-            </div>
-            <div
-              class="img-port"
-              style="background-image: url(imagens/imagem.jpg)"
-            >
-              <div class="overlay">Projeto 2</div>
-            </div>
-            <div
-              class="img-port"
-              style="background-image: url(imagens/imagem.jpg)"
-            >
-              <div class="overlay">Projeto 3</div>
-            </div>
-          </div>
-        </div>
-      </section>
+        <section class="especiliadades">
+            <div class="interface">
+                <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
+                <div class="flex">
+                    <div class="especialidades-box">
+                        <i class="bi bi-code-square"></i>
+                        <h3>Website</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nulla rem dolore inventore delectus at.</p>
+                    </div><!--especialidades-box-->
 
-      <section class="formulario">
-        <!--FALA COMIGO-->
-        <div class="interface">
-          <h2 class="titulo">FALA <span>COMIGO</span>.</h2>
+                    <div class="especialidades-box">
+                        <i class="bi bi-cart"></i>
+                        <h3>Loja online</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nulla rem dolore inventore delectus at.</p>
+                    </div><!--especialidades-box-->
 
-          <form action="">
-            <input type="text" name="" id="" placeholder="Seu nome:" required />
-            <input
-              type="email"
-              name=""
-              id=""
-              placeholder="Seu e-email:"
-              required
-            />
-            <input type="number" name="" id="" placeholder="Seu celular:" />
-            <textarea
-              name=""
-              id=""
-              placeholder="Sua mensagem"
-              required
-            ></textarea>
-            <div class="btn-enviar"><input type="submit" value="ENVIAR" /></div>
-          </form>
-        </div>
-      </section>
+                    <div class="especialidades-box">
+                        <i class="bi bi-wordpress"></i>
+                        <h3>Blog</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nulla rem dolore inventore delectus at.</p>
+                    </div><!--especialidades-box-->
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--especiliadades-->
+
+        <section class="sobre">
+            <div class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="imagens/pessoa-foto.svg" alt="">
+                    </div><!--img-sobre-->
+
+                    <div class="txt-sobre">
+                        <h2>MUITO PRAZER, <span>SOU BRUNO RODRIGUES.</span></h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At accusantium ducimus dicta suscipit, neque cumque sunt tenetur totam delectus magnam minus ratione. Quidem sequi velit voluptatibus eos omnis ullam officiis.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quidem quae iusto repellendus eaque, ipsum sed voluptate explicabo voluptas, dolorum porro sequi laudantium? Obcaecati quae, dolores illo officiis a numquam.</p>
+                        <div class="btn-social">
+                            <a href="#"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="#"><button><i class="bi bi-youtube"></i></button></a>
+                            <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                        </div><!--btn-social-->
+                    </div><!--txt-sobre-->
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--sobre-->
+
+        <section class="portfolio">
+            <div class="interface">
+                <h2 class="titulo">MEU <span>PORTFÓLIO.</span></h2>
+                <div class="flex">
+                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
+                        <div class="overlay">Projeto 1</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
+                        <div class="overlay">Projeto 2</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
+                        <div class="overlay">Projeto 3</div>
+                    </div>
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--portfolio-->
+
+        <section class="formulario">
+            <div class="interface">
+                <h2 class="titulo">FALA <span>COMIGO.</span></h2>
+
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Seu nome completo:" required>
+                    <input type="text" name="" id="" placeholder="Seu e-mail:" required>
+                    <input type="text" name="" id="" placeholder="Seu celular:">
+                    <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                    <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
+                </form>
+            </div><!--interface-->
+        </section><!--formulario-->
+
     </main>
-    <!--MAIN-->
 
     <footer>
-      <!--RODAPÉ-->
-      <div class="interface">
-        <div class="line-footer">
-          <div class="flex">
-            <div class="logo-footer">
-              <img src="imagens/Logo.svg" alt="Logo" width="110" height="110" />
-            </div>
-            <div class="btn-social">
-              <a
-                href="https://www.instagram.com/lucasgabrieldev/"
-                target="_blank"
-                ><button><i class="bi bi-instagram"></i></button
-              ></a>
-              <a href="https://github.com/Lucassevero06" target="_blank"
-                ><button><i class="bi bi-github"></i></button
-              ></a>
-              <a
-                href="https://www.linkedin.com/in/lucas-gabriel-de-silva-vaz-severo-b88061296/"
-                target="_blank"
-                ><button><i class="bi bi-linkedin"></i></button
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="line-footer borda">
-          <p>
-            <i class="bi bi-envelope-at"></i>
-            <a href="mailto:lucasgabriel31032006@gmail.com"
-              >lucasgabriel31032006@gmail.com</a
-            >
-          </p>
-        </div>
-      </div>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="logo-footer">
+                        <img src="imagens/Logo.svg" alt="logo" width="130px" height="130px">
+                    </div><!--logo-footer-->
+                    <div class="btn-social">
+                        <a href="#"><button><i class="bi bi-instagram"></i></button></a>
+                        <a href="#"><button><i class="bi bi-youtube"></i></button></a>
+                        <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                    </div><!--btn-social-->
+                </div>
+            </div><!--line-footer-->
+
+            <div class="line-footer borda">
+                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:lucasgabriel31032006@gmail.com">lucasgabriel31032006@gmail.com</a></p>
+            </div><!--line-footer-->
+        </div><!--interface-->
     </footer>
-    <!--RODAPÉ-->
-  </body>
+
+</body>
 </html>
